2002-12-06  Luke Gorrie  <luke@bluetail.com>

	* elisp/edb.el (edb-monitor): Now putting the point at the last
	process after popping up the monitor (patch from Mats Cronqvist.)

2002-11-30  Luke Gorrie  <luke@bluetail.com>

	* elisp/edb.el (edb-make-breakpoint-overlay): Tiny tweak of
	setting the overlay "rear advance" to nil. This means that if you
	open a new line following a breakpoint, the overlay won't spill
	over onto it.

2002-11-28  Luke Gorrie  <luke@bluetail.com>

	* elisp/edb.el (edb-attach-mode): Bound "b" to
	edb-toggle-breakpoint in attach buffers, as a shortcut.

2002-11-28  Martin Bjorklund  <mbj@bluetail.com>

	* elisp/edb.el: Added visual breakpoints, both in source files and
	the attach buffer.  It uses the customizable face
	'edb-breakpoint-face' for breakpoint highlighting.
	
	* elisp/distel.el: Extended the Erlang menu with a 'distel'
	submenu, which contains the common distel functions.

	* elisp/derl.el (derl-use-trace-buffer): Added a customizable
	'derl-use-trace-buffer' (default t) which is used to turn on/off
	the trace buffer.

	* elisp/net-fsm.el (fsm-use-debug-buffer): Added a customizable
	'fsm-use-debug-buffer' (default nil) which is used to turn on/off
	the net-fsm debug buffer.

2002-11-24  Luke Gorrie  <luke@bluetail.com>

	* configure: Added configure script to CVS.

	* elisp/distel.el (erlang-extended-mode): Added completion binding
	on M-?, since M-TAB is often used by window managers.

	* elisp/distel-ie.el: Changed keybindings. Now C-j evaluates the
	expression behind the point and inserts the result in-line, and
	C-M-x evaluates a function definition and shows the result as a
	message. Based on suggestions from people at EUC.

	* elisp/distel.el (distel): Added Distel customization group under
	Programming->Tools, and put `distel-tags-compliant' and
	`edb-popup-monitor-on-event' in there.

	* elisp/erl-service.el (erl-complete): Added command to complete
	module names and fully-qualified function names, with all the